updated font awesome. added reddit logo.

--- a/app/views/users/certifications.html.erb
+++ b/app/views/users/certifications.html.erb
@@ -185,6 +185,11 @@
           <h4 class="widget-title">Follow us</h4>
           <ul class="social-nav social-center">
             <li>
+              <a href="reddit.com/r/NJEMT" target="_blank" title="Reddit" rel="nofollow" class="google">
+                <i class="fab fa-reddit"></i></i>
+              </a>
+            </li>
+            <li>
               <a href="https://twitter.com/respondersnow" target="_blank" title="Twitter" rel="nofollow" class="twitter"><i class="fab fa-twitter"></i></a>
             </li>
             <li>
@@ -193,6 +198,7 @@
             <li>
               <a href="https://www.instagram.com/respondersnow" target="_blank" title="Instagram" rel="nofollow" class="google"><i class="fab fa-instagram"></i></a>
             </li>
+
           </ul>
         </div>
       </div>
