--- a/app/views/admin_mailer/new_user.html.erb
+++ b/app/views/admin_mailer/new_user.html.erb
@@ -17,7 +17,7 @@
               <tr>
                 <td class="content-cell">
                   <div class="f-fallback">
-                    <h1>Welcome, <%= @name %>!</h1>
+                    <h1>Welcome, <%= @user.name %>!</h1>
                     <p>Thanks for joining RespondersNow. We’re thrilled to have you on board</p>
                     <!-- Action -->
                     <table class="body-action" align="center" width="100%" cellpadding="0" cellspacing="0" role="presentation">
