added a jumbo tron

--- a/app/views/users/certifications.html.erb
+++ b/app/views/users/certifications.html.erb
@@ -204,5 +204,14 @@
       </div>
     </div>
   </div>
-
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="jumbotron">
+        <h2 class="display-1">Hello, <%= current_user&.name&.split(" ")[0] %></h2>
+        <p class="lead">Welcome to a preview of the new RespondersNow experience</p>
+        <hr class="my-4">
+        Please note that this is currently a work in progress and functionality may change over time.
+      </div>
+    </div>
+  </div>
 </div>
