--- a/app/views/users/_main_nav.html.erb
+++ b/app/views/users/_main_nav.html.erb
@@ -8,3 +8,10 @@
     <i class="fas fa-certificate"></i> <span class="nav-label"> Certifications</span>
   <% end %>
 </li>
+
+<li>
+  <a class="disabled" href="#">
+    <i class="fas fa-flag-usa"></i> <span class="nav-label"> v <%= APP_VERSION.to_s %></span>
+  </a>
+</li>
+
