--- a/app/views/users/_main_nav.html.erb
+++ b/app/views/users/_main_nav.html.erb
@@ -1,9 +1,9 @@
-<li class="<%= is_active_action('settings') %>">
+<li class="<%= active_action?('settings') %>">
   <%= link_to settings_path do %>
     <i class="fas fa-cogs"></i><span class="nav-label"> Settings</span>
   <% end %>
 </li>
-<li class="<%= is_active_action('certifications') %>">
+<li class="<%= active_action?('certifications') %>">
   <%= link_to certifications_path do %>
     <i class="fas fa-certificate"></i> <span class="nav-label"> Certifications</span>
   <% end %>
