--- a/app/views/users/certifications.html.erb
+++ b/app/views/users/certifications.html.erb
@@ -1,217 +1,10 @@
-<div class="row wrapper border-bottom white-bg page-heading">
-  <div class="col-sm-4">
-    <h2>Certifications</h2>
-    <ol class="breadcrumb">
-      <li>
-        <a href="<%= url_for :controller => 'dashboards', :action => 'dashboard_1' %>">Profile</a>
-      </li>
-      <li class="active">
-        <strong> Certifications</strong>
-      </li>
-    </ol>
-  </div>
-</div>
-<div class="wrapper wrapper-content">
-  <div class="row">
-    <div class="col-lg-8">
+<div class="row wrapper border-bottom white-bg page-heading"/>
 
-      <button type="button"
-              class="btn btn-primary pull-right"
-              data-toggle="modal"
-              data-target="#add_primary">
-        <i class="fas fa-plus"></i> Add Certification
-      </button>
-
-      <div id="add_primary" class="modal fade" role="dialog">
-        <!--NEW-->
-        <div id="add_primary" class="modal fade" role="dialog">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Add Certification</h4>
-              </div>
-              <div class="modal-body">
-                <%= render partial: 'certifications/form', locals: { primary: true, cert: @certification } %>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- OLD-->
-        <div class="modal-dialog">
-
-          <!-- Modal content-->
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal">&times;</button>
-              <h4 class="modal-title">Add Certification</h4>
-            </div>
-            <div class="modal-body">
-              <%= render partial: 'certifications/form', locals: { primary: true, cert: @certification } %>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="panel panel-primary">
-        <div class="panel-heading">
-          <h5 class="panel-title"> Documents </h5>
-        </div>
-        <% unless current_user.acquired_certifications %>
-          <h1>No Documents / No Certifications</h1>
-        <% else %>
-          <table class="table table-striped table-bordered table-hover dataTables-example">
-            <thead>
-            <tr>
-              <th></th>
-              <th>Name</th>
-              <th>Date Acquired</th>
-              <th>Expires</th>
-              <th>CEUs</th>
-              <th></th>
-
-            </tr>
-            </thead>
-            <tbody>
-            <% current_user.certs_sorted_by_name.each do |cert| %>
-              <tr class="gradeX">
-                <div id="<%= cert.id %>" class="modal fade" role="dialog">
-                  <div class="modal-dialog">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title"><%= cert.certification.name %></h4>
-                      </div>
-                      <div class="modal-body">
-                        <div class='content' style="float:none">
-                          <%# if cert.file.attachment.present? %>
-                          <!--                            <object-->
-                          <!--                              style="width: 100%; height: 800px;"-->
-                          <!--                              data="<%#= url_for(cert.file) %>" type="application/pdf">-->
-                          <!--                              <embed-->
-                          <!--                                style="width: 100%; height:800px;"-->
-                          <!--                                src="<%#= url_for(cert.file) %>" type="application/pdf"/>-->
-                          <!--                            </object>-->
-
-                          <%# end %>
-                        </div>
-                      </div>
-                      I
-                      <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
-                <div id="<%= cert.id %>delete" class="modal fade" role="dialog">
-                  <div class="modal-dialog modal-xl">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                      </div>
-                      <div class="modal-body">
-                        <p class="center-btn">ARE YOU SURE YOU WANT TO DELETE THIS?</p><br>
-                        <h2 class="text-navy"><%= cert.certification.name %></h2>
-                      </div>
-                      <div class="modal-footer">
-                        <%= link_to "Yes, Delete this.", acquired_certification_path(cert.id), class: 'btn btn-xsm btn-danger btn-outline pull-right',
-
-                                    method:                                                           :delete,
-                                    confirm:                                                          'Are you sure you want to delete this?' %>
-                        <button type="button" class="btn btn-xsm btn-info pull-left" data-dismiss="modal">
-                          No. Do not delete.
-                        </button>
-                      </div>
-                    </div>
-
-                  </div>
-                </div>
-
-                <div id="<%= cert.id %>edit" class="modal fade" role="dialog">
-                  <div class="modal-dialog modal-xl">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                      </div>
-                      <div class="modal-body">
-                        <%= render partial: 'certifications/form', locals: { primary: cert.certification.primary, cert: cert } %>
-                      </div>
-                    </div>
-
-                  </div>
-                </div>
-
-                <td class="text-center">
-                  <img alt="image" style="max-width: 35px" src="<%= image_path(cert.cert_logo) %>">
-
-                </td>
-                <td><%= cert.certification.name %></td>
-                <td class="text-left"><%= cert.acquired_on %></td>
-                <td class="text-left"><%= cert.expires ? "#{distance_of_time_in_words(Time.now, cert.expires_on)} from now".humanize : "Never" %></td>
-                <td class="text-center"><%= cert.ceus > 0 ? cert.ceus : "" %></td>
-                <td class="text-center">
-                  <div class="btn-group pull-right">
-                    <% if cert.file.attachment.present? %>
-                      <button type="button" class="btn btn-sm btn-info btn-outline" data-toggle="modal" data-target="#<%= cert.id %>">
-                        <i class="far fa-file-pdf"></i>
-                      </button>
-                    <% end %>
-                    <button type="button" class="btn btn-sm btn-primary btn-outline" data-toggle="modal" data-target="#<%= cert.id %>edit">
-                      <i class="far fa-edit"></i>
-                    </button>
-                    <button type="button" class="btn btn-sm btn-default btn-danger" data-toggle="modal" data-target="#<%= cert.id %>delete">
-                      <i class="fas fa-trash-alt"></i>
-                    </button>
-
-                  </div>
-                </td>
-              </tr>
-            <% end %>
-            </table>
-        <% end %>
-      </div>
-    </div>
-    <div class="col-lg-4">
-
-      <div class="text-center">
-        <div>
-          <div class="navy-line"></div>
-          <h4 class="widget-title">Follow us</h4>
-          <ul class="social-nav social-center">
-            <li>
-              <a href="reddit.com/r/NJEMT" target="_blank" title="Reddit" rel="nofollow" class="google">
-                <i class="fab fa-reddit"></i></i>
-              </a>
-            </li>
-            <li>
-              <a href="https://twitter.com/respondersnow" target="_blank" title="Twitter" rel="nofollow" class="twitter"><i class="fab fa-twitter"></i></a>
-            </li>
-            <li>
-              <a href="https://www.facebook.com/RespondersNow/" target="_blank" title="Facebook" rel="nofollow" class="facebook"><i class="fab fa-facebook-f"></i></a>
-            </li>
-            <li>
-              <a href="https://www.instagram.com/respondersnow" target="_blank" title="Instagram" rel="nofollow" class="google"><i class="fab fa-instagram"></i></a>
-            </li>
-
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-lg-12">
-      <div class="jumbotron">
-        <h2 class="display-1">Hello, <%= current_user&.name&.split(" ")[0] %></h2>
-        <p class="lead">Welcome to a preview of the new RespondersNow experience</p>
-        <hr class="my-4">
-        Please note that this is currently a work in progress and functionality may change over time.
-      </div>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="wrapper wrapper-content">
+      <div id="root"/>
     </div>
   </div>
 </div>
+<%= javascript_pack_tag 'cert_app' %>
